created flaoting icon

--- a/popup.html
+++ b/popup.html
@@ -135,7 +135,7 @@
 
     <div id="notes" class="tab-content">
       <h2>Notes</h2>
-      <div id="notesContainer"></div>
+      <div class="notes-container" id="notesContainer"></div>
     </div>
 
     <div id="progress" class="tab-content">
